Update index with apps

--- a/index.html
+++ b/index.html
@@ -1,8 +1,75 @@
 <html>
     <head>
         <title>WOPA</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Lato:300,400,600' rel='stylesheet' type='text/css'>
+
+		<link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+    	<div class="header">
+    		<div class="wrap">
+		        <h1>Wopa</h1>
+		        <h2>Photography Solutions</h2>
+	        </div>
+        </div>
+
+        <div class="content">
+        	<div class="wrap clearfix">
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/lense.png" /></span>
+						<h4>Corrección de color</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/light.png" /></span>
+						<h4>Iluminación</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/tripod.png" /></span>
+						<h4>Estabilización de imagen</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/sandisk.png" /></span>
+						<h4>Optimizador de tamaño</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/camera.png" /></span>
+						<h4>Funciones de cámara</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/film.png" /></span>
+						<h4>Revelado</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/binocular.png" /></span>
+						<h4>Ampliación</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/lenspen.png" /></span>
+						<h4>Limpieza de lente</h4>
+					</div>
+				</a>
+				<a class="app">
+					<div class="in">
+						<span class="img"><img src="icons/flashgun.png" /></span>
+						<h4>Flash</h4>
+					</div>
+				</a>
+			</div>
+        </div>
     </body>
 </html>
